# marketplace_integration

./: README.md  pyproject.toml
marketplace_integration/: hooks.py  image.py  lazada.py  modules.txt  soft_delete.py  tasks.py  token_update.py
marketplace_integration/api/: __init__.py
marketplace_integration/auth/: create_client.py
marketplace_integration/marketplace/lazada_api/: __init__.py
marketplace_integration/marketplace/lazada_manager/: __init__.py
marketplace_integration/marketplace_integration/doctype/lazada_category/: lazada_category.js  lazada_category.json  lazada_category.py  test_lazada_category.py
marketplace_integration/marketplace_integration/doctype/lazada_items/: lazada_items.js  lazada_items.json  lazada_items.py  test_lazada_items.py
marketplace_integration/marketplace_integration/doctype/lazada_seller/: lazada_seller.js  lazada_seller.json  lazada_seller.py  test_lazada_seller.py
marketplace_integration/marketplace_integration/doctype/lazada_skus/: lazada_skus.json  lazada_skus.py
marketplace_integration/marketplace_integration/doctype/marketplace_integration/: marketplace_integration.js  marketplace_integration.json  marketplace_integration.py  test_marketplace_integration.py
marketplace_integration/marketplace_integration/doctype/marketplace_logs/: marketplace_logs.js  marketplace_logs.json  marketplace_logs.py  test_marketplace_logs.py
marketplace_integration/marketplace_integration/webhook/: handle_webhook.py
marketplace_integration/webhook/: handle_webhook.py
